--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </button>
           </div>
           <nav class="flex flex-col flex-1 w-64 p-4 mt-4">
-            <a href="#" class="flex items-center space-x-2">
+            <a href="https://skydev12.github.io/menu" class="flex items-center space-x-2">
               <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -80,6 +80,26 @@
                 />
               </svg>
               <span>Home</span>
+            </a>
+          </nav>
+            <nav class="flex flex-col flex-1 w-64 p-4 mt-4">
+            <a href="https://skydev12.github.io/kalku" class="flex items-center space-x-2">
+              <svg
+                class="w-6 h-6"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                />
+              </svg>
+              <span>kalkulator</span>
             </a>
           </nav>
           <div class="flex-shrink-0 p-4">
