--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
         
                 <!-- top content disini adalah isi nya -->
                   </div>
+             </div>
                 <div class="flex rounded-t-lg bg-top-color sm:px-2 w-full">
                     <div class="h-40 w-40 overflow-hidden sm:rounded-full sm:relative sm:p-0 top-10 left-5 p-3">
                         <img src="profil.png"/>
@@ -301,7 +302,7 @@
                                                 </path>
                                             </svg>
                                         </a>
-                                        <div>6282173242194</div>
+                                        <div>XRYMODSYT</div>
                                     </div>
                                     <div class="flex items-center my-1">
                                         <a class="w-6 text-gray-700 hover:text-orange-600"
