--- a/index.html
+++ b/index.html
@@ -214,6 +214,26 @@
     <span>Sky-Learning</span>
         </a>
     </nav>
+             <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
+        <a href="https://skydev12.github.io/elearning" class="flex items-center space-x-2">
+            <svg
+                class="w-6 h-6"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+            >
+            <path
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="2"
+    d="M10 10L20 10L20 20L10 20ZM15 15L5 15L5 5L15 5Z"
+/>
+    </svg>
+    <span>Al-Quran</span>
+        </a>
+    </nav>
           <div class="flex-shrink-0 p-4">
             <button class="flex items-center space-x-2">
               <svg
