--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </a>
     </nav>
              <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/elearning" class="flex items-center space-x-2">
+        <a href="https://skydev12.github.io/alquran" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
