--- a/index.html
+++ b/index.html
@@ -234,6 +234,26 @@
     <span>Al-Quran</span>
         </a>
     </nav>
+            <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
+        <a href="https://skydev12.github.io/translate" class="flex items-center space-x-2">
+            <svg
+                class="w-6 h-6"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+            >
+            <path
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="2"
+    d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-2a6 6 0 1 0 0-12 6 6 0 0 0 0 12zm-.82-9.879a1 1 0 1 0 1.414-1.414l2.121 2.121a1 1 0 0 0 0 1.414L10.596 13.1a1 1 0 0 0-1.414-1.414l1.57-1.571-1.563-1.562zM8 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm1.879 4.82a1 1 0 0 0-1.414-1.414l-2.121 2.121a1 1 0 0 0 0 1.414l2.121 2.121a1 1 0 1 0 1.414-1.414l-1.57-1.571 1.563-1.562zM11 10a1 1 0 1 0-2 0 1 1 0 0 0 2 0z"
+/>
+    </svg>
+    <span>translate</span>
+        </a>
+    </nav>
           <div class="flex-shrink-0 p-4">
             <button class="flex items-center space-x-2">
               <svg
