--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         
         <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
             <!-- Menambahkan margin-top di sini -->
-            <a href="https://skydev12.github.io/kalku" class="flex items-center space-x-2">
+            <a href="kalku.html" class="flex items-center space-x-2">
                 <svg
                     class="w-6 h-6"
                     aria-hidden="true"
