--- a/kalender.html
+++ b/kalender.html
@@ -72,7 +72,7 @@
             }
         </style>
         
-        <nav class="flex flex-col flex-1 w-64 p-4 mt-4 menu-nav">
+      <nav class="flex flex-col flex-1 w-64 p-4 mt-4 menu-nav">
             <a href="index.html" class="flex items-center space-x-2">
                 <svg
                     class="w-6 h-6"
@@ -135,7 +135,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/solat" class="flex items-center space-x-2">
+        <a href="solat.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -155,7 +155,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/marketplace" class="flex items-center space-x-2">
+        <a href="marketplace.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -175,7 +175,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/musik" class="flex items-center space-x-2">
+        <a href="musik.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -195,7 +195,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/elearning" class="flex items-center space-x-2">
+        <a href="elearning.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -215,7 +215,7 @@
         </a>
     </nav>
              <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/alquran" class="flex items-center space-x-2">
+        <a href="alquran.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -235,7 +235,7 @@
         </a>
     </nav>
             <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/translate" class="flex items-center space-x-2">
+        <a href="translate.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
