--- a/alquran.html
+++ b/alquran.html
@@ -76,8 +76,8 @@
             }
         </style>
         
-        <nav class="flex flex-col flex-1 w-64 p-4 mt-4 menu-nav">
-            <a href="https://skydev12.github.io/menu" class="flex items-center space-x-2">
+       <nav class="flex flex-col flex-1 w-64 p-4 mt-4 menu-nav">
+            <a href="index.html" class="flex items-center space-x-2">
                 <svg
                     class="w-6 h-6"
                     aria-hidden="true"
@@ -99,7 +99,7 @@
         
         <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
             <!-- Menambahkan margin-top di sini -->
-            <a href="https://skydev12.github.io/kalku" class="flex items-center space-x-2">
+            <a href="kalku.html" class="flex items-center space-x-2">
                 <svg
                     class="w-6 h-6"
                     aria-hidden="true"
@@ -119,7 +119,7 @@
             </a>
         </nav>
         <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/kalender" class="flex items-center space-x-2">
+        <a href="kalender.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -139,7 +139,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/solat" class="flex items-center space-x-2">
+        <a href="solat.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -159,7 +159,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/marketplace" class="flex items-center space-x-2">
+        <a href="marketplace.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -179,7 +179,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/musik" class="flex items-center space-x-2">
+        <a href="musik.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -199,7 +199,7 @@
         </a>
     </nav>
     <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/elearning" class="flex items-center space-x-2">
+        <a href="elearning.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -218,8 +218,8 @@
     <span>Sky-Learning</span>
         </a>
     </nav>
-           <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/alquran" class="flex items-center space-x-2">
+             <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
+        <a href="alquran.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
@@ -238,8 +238,8 @@
     <span>Al-Quran</span>
         </a>
     </nav>
-          <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
-        <a href="https://skydev12.github.io/translate" class="flex items-center space-x-2">
+            <nav class="flex flex-col flex-1 w-64 p-4 mt-2 menu-nav"> 
+        <a href="translate.html" class="flex items-center space-x-2">
             <svg
                 class="w-6 h-6"
                 aria-hidden="true"
