--- a/translate.html
+++ b/translate.html
@@ -216,8 +216,8 @@
     </div>
     
 
-    <script src="js/countries.js"></script>
-    <script src="js/script.js"></script>
+    <script src="countries.js"></script>
+    <script src="translate.js"></script>
 
   </body>
 </html>
