--- a/translate.html
+++ b/translate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">  
     <title>sky</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="translate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
