--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
    <!-- Profile Section -->
 <div class="flex flex-col sm:flex-row items-center bg-blue-500 p-5 rounded-t-lg">
     <div class="h-40 w-40 overflow-hidden rounded-full neon-animation">
-        <img src="profil.png" alt="Profile Picture" class="object-cover h-full w-full"/>
+        <img src="profil.jpg" alt="Profile Picture" class="object-cover h-full w-full"/>
         <div class="line-animation">
     </div>
 </div>
@@ -157,7 +157,7 @@
         <a href="marketplace.html" class="icon-button neon">
             <i class="fas fa-shopping-cart"></i>
         </a>
-        <a href="music.html" class="icon-button neon">
+        <a href="musik.html" class="icon-button neon">
             <i class="fas fa-music"></i>
         </a>
         <a href="elearning.html" class="icon-button neon">
