--- a/elearning.html
+++ b/elearning.html
@@ -146,13 +146,13 @@
     <h1 class="neon-text mb-8">SKY ELEARNING BY RISKY</h1>
 
     <div class="container mx-auto p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
-        <a href="https://riskyx.my.id" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
+        <a href="alpro9.html" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
             <div class="p-4">
                 <h2 class="neon-title">ALPRO 9</h2>
                 <p class="text-gray-400 text-center">click untuk melihat tugas</p>
             </div>
         </a>
-        <a href="#section2" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
+        <a href="alpro10.html" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
             <div class="p-4">
                 <h2 class="neon-title">ALPRO 10</h2>
                 <p class="text-gray-400 text-center">click untuk melihat tugas</p>
