--- a/elearning.html
+++ b/elearning.html
@@ -158,9 +158,9 @@
                 <p class="text-gray-400 text-center">click untuk melihat tugas</p>
             </div>
         </a>
-        <a href="#section3" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
+        <a href="alpro11.html" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
             <div class="p-4">
-                <h2 class="neon-title">RESUME MSI </h2>
+                <h2 class="neon-title">ALPRO 11</h2>
                 <p class="text-gray-400 text-center">click untuk melihat tugas</p>
             </div>
         </a>
