--- a/alpro11.html
+++ b/alpro11.html
@@ -125,9 +125,9 @@
                 <i class="fas fa-language"></i>
             </a>
             <div class="bg-white shadow-md rounded p-4">
-                <img src="10alpro.png" class="w-auto h-auto" alt="Image Description">
+                <img src="alpro11.png" class="w-auto h-auto" alt="Image Description">
                 <div class="text-sm text-gray-500 mb-4">
-                    <h1>Ini adalah cuplikan tugas algoritma pemrograman pertemuan 10. Silahkan di-download file-nya pada tombol di bawah ini:</h1>
+                    <h3>Ini adalah cuplikan tugas algoritma pemrograman pertemuan 10. Silahkan di-download file-nya pada tombol di bawah ini:</h3>
                     <!-- Add programming language column here -->
                     <div class="mt-4">
                         <h2 class="text-lg font-semibold">Programming Language:</h2>
