--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
 
     <!-- Premium Section -->
     <div id="premium-section" class="p-5 bg-gray-800 rounded-lg shadow-lg mt-5">
-        <h2 class="text-lg font-poppins font-bold text-blue-500">Premium Content</h2>
+        <h2 class="text-lg font-poppins font-bold text-blue-500">STORY RISKY</h2>
         <div class="border-2 w-20 border-blue-500 my-3"></div>
-        <p class="text-white">This is where your premium content will go. Add more details about your premium offerings here.</p>
+        <p class="text-white"> belum gua isi nanti lah ya kalau sudah ada isinya</p>
     </div>
 
     <script>
