--- a/elearning.html
+++ b/elearning.html
@@ -164,10 +164,10 @@
                 <p class="text-gray-400 text-center">click untuk melihat tugas</p>
             </div>
         </a>
-        <a href="#section4" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
+        <a href="mtk.html" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
             <div class="p-4">
-                <h2 class="neon-title">PENGANTAR CODING MODUL 9</h2>
-                <p class="text-gray-400 text-center">click untuk melihat tugas</p>
+                <h2 class="neon-title">kalkulus private</h2>
+                <p class="text-gray-400 text-center">click untuk melihat kalkulus</p>
             </div>
         </a>
         <a href="#section5" class="card bg-gray-800 rounded-lg shadow-lg overflow-hidden transform transition duration-500 hover:scale-105">
