--- a/translate.html
+++ b/translate.html
@@ -2,14 +2,124 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>sky</title>
-    <link rel="stylesheet" href="translate.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome CDN Link for Icons -->
+    <title>Sky - Translate</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      /* ini untuk style menu */
+      .card-container1 {
+        background-color: #333; /* Warna hijau pekat */
+        padding: 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      }
+
+      .icon-button {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 3.2rem;
+        margin: 10px;
+        padding: 10px 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease;
+        position: relative;
+      }
+
+      .icon-button:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+      }
+
+      /* Gaya Neon */
+      .neon {
+        color: #d8cdf1; /* Warna teks putih */
+        text-shadow: 0 0 5px #00fff9, 0 0 10px #329e9c, 0 0 15px #00fff9, 0 0 20px #00fff9; /* Bayangan teks berwarna neon */
+      }
+
+      /* Untuk elemen fullscreen di Android */
+      @media only screen and (max-width: 600px) {
+        html,
+        body,
+        .w-full {
+          height: 100%;
+        }
+        .w-full {
+          min-height: 100%;
+        }
+      }
+
+      /* Efek partikel */
+      #particles-js {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 5;
+      }
+
+      /* Container style */
+      .container {
+        position: relative;
+        z-index: 10; /* Pastikan konten di atas partikel */
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.8); /* Transparansi latar belakang */
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      }
+
+      /* Style untuk wrapper */
+      .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      /* Style untuk textarea */
+      .text-input textarea {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 1rem;
+        resize: none;
+      }
+
+      /* Style untuk controls */
+      .controls {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+      }
+
+      .controls .row {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .controls .icons i {
+        cursor: pointer;
+        font-size: 1.5rem;
+        margin: 0 5px;
+      }
+
+      .controls .exchange {
+        font-size: 2rem;
+        cursor: pointer;
+        margin: 0 10px;
+      }
+    </style>
   </head>
-  <body>
-   
+  <body class="relative">
+    <div id="particles-js"></div>
+
     <div class="container">
       <div class="wrapper">
         <div class="text-input">
@@ -35,66 +145,158 @@
         </ul>
       </div>
       <button>Translate Text</button>
-      <style>
-        /* Membuat ikon menjadi tombol */
-        .icon-button {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 3.2rem;
-            margin: 10px;
-        }
-    </style>
-</head>
-<body>
-    <!-- Tombol dengan ikon -->
-    <a href="index.html" class="icon-button">
-        <i class="fas fa-home"></i> <!-- Ikon Home -->
-    </a>
+    </div>
 
-    <a href="kalku.html" class="icon-button">
-        <i class="fas fa-calculator"></i> <!-- Ikon Kalkulator -->
-    </a>
+    <div class="card-container1 mt-5">
+      <div class="flex justify-center flex-wrap mt-5">
+        <a href="index.html" class="icon-button neon">
+          <i class="fas fa-home"></i>
+        </a>
+        <a href="kalku.html" class="icon-button neon">
+          <i class="fas fa-calculator"></i>
+        </a>
+        <a href="kalender.html" class="icon-button neon">
+          <i class="far fa-calendar-alt"></i>
+        </a>
+        <a href="solat.html" class="icon-button neon">
+          <i class="fas fa-praying-hands"></i>
+        </a>
+        <a href="marketplace.html" class="icon-button neon">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
+        <a href="music.html" class="icon-button neon">
+          <i class="fas fa-music"></i>
+        </a>
+        <a href="elearning.html" class="icon-button neon">
+          <i class="fas fa-book"></i>
+        </a>
+        <a href="alquran.html" class="icon-button neon">
+          <i class="fas fa-quran"></i>
+        </a>
+        <a href="translate.html" class="icon-button neon">
+          <i class="fas fa-language"></i>
+        </a>
+      </div>
+    </div>
 
-    <a href="kalender.html" class="icon-button">
-        <i class="far fa-calendar-alt"></i> <!-- Ikon Kalender -->
-    </a>
-
-    <a href="solat.html" class="icon-button">
-        <i class="fas fa-praying-hands"></i> <!-- Ikon Solat -->
-    </a>
-
-    <a href="marketplace.html" class="icon-button">
-        <i class="fas fa-shopping-cart"></i> <!-- Ikon Toko -->
-    </a>
-
-    <a href="music.html" class="icon-button">
-        <i class="fas fa-music"></i> <!-- Ikon Musik -->
-    </a>
-
-    <a href="elearning.html" class="icon-button">
-        <i class="fas fa-book"></i> <!-- Ikon Belajar -->
-    </a>
-
-    <a href="alquran.html" class="icon-button">
-        <i class="fas fa-quran"></i> <!-- Ikon Al-Quran -->
-    </a>
-
-    <a href="translate.html" class="icon-button">
-        <i class="fas fa-language"></i> <!-- Ikon Terjemahan -->
-    </a>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+    <script>
+      particlesJS("particles-js", {
+        "particles": {
+          "number": {
+            "value": 80,
+            "density": {
+              "enable": true,
+              "value_area": 800
+            }
+          },
+          "color": {
+            "value": "#00ff00"
+          },
+          "shape": {
+            "type": "circle",
+            "stroke": {
+              "width": 0,
+              "color": "#000000"
+            },
+            "polygon": {
+              "nb_sides": 5
+            }
+          },
+          "opacity": {
+            "value": 0.5,
+            "random": false,
+            "anim": {
+              "enable": false,
+              "speed": 1,
+              "opacity_min": 0.1,
+              "sync": false
+            }
+          },
+          "size": {
+            "value": 3,
+            "random": true,
+            "anim": {
+              "enable": false,
+              "speed": 40,
+              "size_min": 0.1,
+              "sync": false
+            }
+          },
+          "line_linked": {
+            "enable": true,
+            "distance": 150,
+            "color": "#00ff00",
+            "opacity": 0.4,
+            "width": 1
+          },
+          "move": {
+            "enable": true,
+            "speed": 6,
+            "direction": "none",
+            "random": false,
+            "straight": false,
+            "out_mode": "out",
+            "attract": {
+              "enable": false,
+              "rotateX": 600,
+              "rotateY": 1200
+            }
+          }
+        },
+        "interactivity": {
+          "detect_on": "canvas",
+          "events": {
+            "onhover": {
+              "enable": true,
+              "mode": "repulse"
+            },
+            "onclick": {
+              "enable": true,
+              "mode": "push"
+            },
+            "resize": true
+          },
+          "modes": {
+            "grab": {
+              "distance": 400,
+              "line_linked": {
+                "opacity": 1
+              }
+            },
+            "bubble": {
+              "distance": 400,
+              "size": 40,
+              "duration": 2,
+              "size": 40,
+              "duration": 2,
+              "opacity": 8,
+              "speed": 3
+            },
+            "repulse": {
+              "distance": 200,
+              "duration": 0.4
+            },
+            "push": {
+              "particles_nb": 4
+            },
+            "remove": {
+              "particles_nb": 2
+            }
+          }
+        },
+        "retina_detect": true
+      });
+    </script>
 
     <script>
-        // Fungsi untuk kembali ke halaman sebelumnya
-        function goBack() {
-            window.history.back();
-        }
+      // Fungsi untuk kembali ke halaman sebelumnya
+      function goBack() {
+        window.history.back();
+      }
     </script>
-    </div>
-    
 
     <script src="countries.js"></script>
     <script src="translate.js"></script>
-
   </body>
 </html>
