--- a/alquran.html
+++ b/alquran.html
@@ -229,6 +229,6 @@
         window.history.back();
       }
     </script>
-    <script src="alquran.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
