--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <div id="premium-section" class="p-5 bg-gray-800 rounded-lg shadow-lg mt-5">
     <h2 class="text-lg font-poppins font-bold text-blue-500">STORY RISKY</h2>
     <div class="border-2 w-20 border-blue-500 my-3"></div>
-    <p class="text-white"> story hari </p>
+    <p class="text-white"> ini hanya sebatas galery saja </p>
     <div class="grid grid-cols-3 gap-2">
         <div class="col-span-1">
             <img src="s1.jpg" alt="Image 1" class="w-full h-auto">
@@ -368,9 +368,6 @@
             </div>
             <div class="w-1/3 p-2">
                 <img src="exis.jpg" alt="Image 2" class="w-full h-auto">
-            </div>
-            <div class="w-1/3 p-2">
-                <img src="https://via.placeholder.com/150" alt="Image 3" class="w-full h-auto">
             </div>
         </div>
     </div>
