--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body {
                 <div class="flex items-center mb-2">
                     <div class="video-container">
                         <video id="text-video" src="particles.mp4" muted autoplay loop></video>
-    <h2><span>R</span>isky<span>De</span>veloper</h2>
+    <h2><span>R</span>is<span>k</span>y</h2>
 </div>
                     <img src="R.gif" alt="Nama GIF" class="h-50 w-50 object-cover mr-2">
                 </div>
