--- a/index.html
+++ b/index.html
@@ -460,6 +460,9 @@ body {
         <div class="col-span-1">
             <img src="s2.jpg" alt="Image 2" class="w-full h-auto">
         </div>
+         <div class="col-span-1">
+            <video src="sad1.mp4" alt="Image 2" class="w-full h-auto">
+        </div>
         
     </div>
 </div>
