--- a/index.html
+++ b/index.html
@@ -437,31 +437,37 @@ body {
     </div>
 
  <!-- Premium Section -->
-<div id="premium-section" class="p-5 bg-gray-800 rounded-lg shadow-lg mt-5">
-    <h2 class="text-lg font-poppins font-bold text-blue-500">STORY RISKY</h2>
-    <div class="border-2 w-20 border-blue-500 my-3"></div>
-    <p class="text-white"> ini hanya sebatas galery saja </p>
-    <div class="grid grid-cols-3 gap-2">
-        <div class="col-span-1">
-            <img src="s1.jpg" alt="Image 1" class="w-full h-auto">
-        </div>
-        <div class="col-span-1">
-            <img src="s5.jpg" alt="Image 5" class="w-full h-auto">
-        </div>
-        <div class="col-span-1">
-            <img src="s6.jpg" alt="Image 2" class="w-full h-auto">
-        </div>
-        <div class="col-span-1">
-            <img src="s3.jpg" alt="Image 3" class="w-full h-auto">
-        </div>
-        <div class="col-span-1">
-            <img src="s4.jpg" alt="Image 4" class="w-full h-auto">
-        </div>
-        <div class="col-span-1">
-            <img src="s2.jpg" alt="Image 2" class="w-full h-auto">
-        </div>
-    </div>
-</div>
+   <div id="premium-section" class="p-5 bg-gray-800 rounded-lg shadow-lg mt-5">
+             <div class="button-container">
+                 <a href="video.html" class="button-link">
+                     <button class="bg-blue-500 text-white px-3 py-1 rounded-full shadow-md hover:bg-blue-600">Video galery</button>
+                 </a>
+             </div>
+             <h2 class="text-lg font-poppins font-bold text-blue-500">STORY RISKY</h2>
+             <div class="border-2 w-20 border-blue-500 my-3"></div>
+             <p class="text-white">ini hanya sebatas galery saja</p>
+             <div class="grid grid-cols-3 gap-2">
+                 <div class="col-span-1">
+                     <img src="s1.jpg" alt="Image 1" class="w-full h-auto">
+                 </div>
+                 <div class="col-span-1">
+                     <img src="s5.jpg" alt="Image 5" class="w-full h-auto">
+                 </div>
+                 <div class="col-span-1">
+                     <img src="s6.jpg" alt="Image 2" class="w-full h-auto">
+                 </div>
+                 <div class="col-span-1">
+                     <img src="s3.jpg" alt="Image 3" class="w-full h-auto">
+                 </div>
+                 <div class="col-span-1">
+                     <img src="s4.jpg" alt="Image 4" class="w-full h-auto">
+                 </div>
+                 <div class="col-span-1">
+                     <img src="s2.jpg" alt="Image 2" class="w-full h-auto">
+                 </div>
+             </div>
+         </div>
+     </div>
 
 
 
