--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@ body {
     </div>
 
  <!-- Premium Section -->
+    <body class="bg-gray-100">
    <div id="premium-section" class="p-5 bg-gray-800 rounded-lg shadow-lg mt-5">
              <div class="button-container">
                  <a href="video.html" class="button-link">
