--- a/musik.html
+++ b/musik.html
@@ -166,7 +166,13 @@
                 Your browser does not support the audio element.
             </audio>
         </div>
-        
+           <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
+            <h1 class="text-center text-2xl font-bold mb-4">Tak sedalam ini</h1>
+            <audio controls preload="auto" id="audio6">
+                <source src="music6.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
     </div>
 </div>
 
