--- a/video.html
+++ b/video.html
@@ -34,28 +34,28 @@
                     <!-- Video 1 -->
                     <div class="video-container">
                         <video controls>
-                            <source src="sad1.mp4" type="video/mp4">
+                            <source src="vid1.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
                     <!-- Video 2 -->
                     <div class="video-container">
                         <video controls>
-                            <source src="video2.mp4" type="video/mp4">
+                            <source src="vid2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
                     <!-- Video 3 -->
                     <div class="video-container">
                         <video controls>
-                            <source src="video3.mp4" type="video/mp4">
+                            <source src="vid3.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
                     <!-- Video 4 -->
                     <div class="video-container">
                         <video controls>
-                            <source src="video4.mp4" type="video/mp4">
+                            <source src="vid4.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
