--- a/musik.html
+++ b/musik.html
@@ -176,14 +176,14 @@
           <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">mimpi yang sempurna</h1>
             <audio controls preload="auto" id="audio7">
-                <source src="musik7.acc" type="audio/mpeg">
+                <source src="musik7.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
            <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">manyimpan raso</h1>
             <audio controls preload="auto" id="audio8">
-                <source src="musik8.acc" type="audio/mpeg">
+                <source src="musik8.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
