--- a/musik.html
+++ b/musik.html
@@ -161,28 +161,28 @@
         
         <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">Slut - Taylor Swift</h1>
-            <audio controls preload="auto" id="audio5">
+            <audio controls preload="auto" id="audio5" data-next="audio6">
                 <source src="music5.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
            <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">Tak sedalam ini</h1>
-            <audio controls preload="auto" id="audio6">
+            <audio controls preload="auto" id="audio6" data-next="audio7">
                 <source src="musik6.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
           <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">mimpi yang sempurna</h1>
-            <audio controls preload="auto" id="audio7">
+            <audio controls preload="auto" id="audio7" data-next="audio8">
                 <source src="musik7.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
            <div class="card rounded-lg shadow-md text-center py-4 mb-4 bg-black bg-opacity-50">
             <h1 class="text-center text-2xl font-bold mb-4">manyimpan raso</h1>
-            <audio controls preload="auto" id="audio8">
+            <audio controls preload="auto" id="audio8" data-next="audio9">
                 <source src="musik8.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
