--- a/video.html
+++ b/video.html
@@ -59,6 +59,34 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
+<!--                     video 1 -->
+                       <div class="video-container">
+                        <video controls>
+                            <source src="vid5.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <!-- Video 2 -->
+                    <div class="video-container">
+                        <video controls>
+                            <source src="vid6.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <!-- Video 3 -->
+                    <div class="video-container">
+                        <video controls>
+                            <source src="vid7.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <!-- Video 4 -->
+                    <div class="video-container">
+                        <video controls>
+                            <source src="vid8.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
                 </div>
                 <p class="text-gray-600 mt-4">thanks sudah menonton</p>
             </div>
